--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -70,8 +70,9 @@ export const ROW_TWO = [
             <ul>
                 <li><Link to="./plugins">Plugins</Link></li>
                 <li><Link to="./plugins/jabby">Jabby</Link></li>
-                <li><Link to="./plugins/matter_debugger">Matter Debugger</Link></li>
                 <li><Link to="./plugins/matter_hooks">Matter Hooks</Link></li>
+                <li><Link to="./plugins/matter_debugger">Matter Debugger</Link></li>
+                <li><Link to="./plugins/runservice">RunService Phases</Link></li>
             </ul>
         </>,
     },
