--- a/docs/setup_guides/jecs.mdx
+++ b/docs/setup_guides/jecs.mdx
@@ -47,10 +47,10 @@ Check the respective repositories for [Jecs](https://github.com/Ukendio/jecs) an
 [dependencies]
 Jabby = "alicesaidhi/jabby@0.2.0-rc.8"
 Jecs = "ukendio/jecs@0.5.3"
-Planck = "yetanotherclown/planck@0.2.0-alpha.2"
-PlanckJabby = "yetanotherclown/planck-jabby@0.1.0-rc.3"
-PlanckRunService = "yetanotherclown/planck-runservice@0.2.0-alpha.2"
-MatterHooks = "yetanotherclown/planck-matter-hooks@0.1.0-rc.3"
+Planck = "yetanotherclown/planck@0.2.0"
+PlanckJabby = "yetanotherclown/planck-jabby@0.2.0"
+PlanckRunService = "yetanotherclown/planck-runservice@0.2.0"
+MatterHooks = "yetanotherclown/planck-matter-hooks@0.2.0"
 ```
 
 ### Creating the World
