Add package manager examples

--- a/docs/setup_guides/jecs.mdx
+++ b/docs/setup_guides/jecs.mdx
@@ -46,6 +46,8 @@ only the version used and confirmed to work with this setup guide.
 Check the respective repositories for [Jecs](https://github.com/Ukendio/jecs) and [Jabby](https://github.com/alicesaidhi/jabby) for updates.
 :::
  
+<Tabs groupId="package-manager">
+<TabItem value="wally" label="Wally">
 ```toml title="wally.toml"
 [dependencies]
 Jabby = "alicesaidhi/jabby@0.2.0-rc.8"
@@ -55,6 +57,11 @@ PlanckJabby = "yetanotherclown/planck-jabby@0.2.0-rc.1"
 PlanckRunService = "yetanotherclown/planck-runservice@0.2.0-rc.1"
 MatterHooks = "yetanotherclown/planck-matter-hooks@0.2.0-rc.1"
 ```
+</TabItem>
+<TabItem value="npm" label="NPM">
+Run `npm i @rbxts/jecs @rbxts/planck @rbxts/planck-jabby @rbxts/planck-runservice @rbxts/planck-matter-hooks @rbxts/planck-matter-debugger` in your terminal.
+</TabItem>
+</Tabs>
 
 ### Creating the World
 
